# geph-tui

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  build.rs  gephctl  mikuctl  package-windows.sh  package.sh
.omo/run-continuation/: ses_0c9f956b7ffeIUTwAFk5WQvXkS.json
package/: deb-copyright
package/DEBIAN/: control.template  postinst  postrm
package/deb-scripts/: postinst  postrm
package/scoop/: geph-tui.json
scripts/: test-registration.sh
src/: autoupdate.rs  daemon.rs  event.rs  main.rs  state.rs  test_log.rs
src/ui/: config.rs  debug.rs  mod.rs  nodes.rs  status.rs
