[package]
name = "gephgui-tui"
version = "0.0.1"
edition = "2021"
description = "TUI client for Geph"
repository = "https://github.com/godfreyschneider0-lgtm/gephgui-tui"
license = "MPL-2.0"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
#geph5-client = { path = "../geph5/binaries/geph5-client" }
#geph5-broker-protocol = { path = "../geph5/libraries/geph5-broker-protocol" }

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
smolscale = "0.4"
anyhow = "1.0.102"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.4"
parking_lot = "0.11.2"
slab = "0.4.12"
runas = "0.2.1"
smol = "2"
dirs = "4.0.0"
tempfile = "3.27.0"
ratatui = "0.29.0"
crossterm = "0.28.1"

flume = "0.10.14"

oneshot = "0.1"

serde_yaml = "0.9.34"
semver = "1.0.28"
smol-timeout2 = "0.6.1"
rand = "0.8.6"
nanorpc = "0.1.13"
async-trait = "0.1.89"
thiserror = "2.0.18"
geph5-client = { version = "0.2.102", features = ["windivert", "aws_lambda"] }
geph5-broker-protocol = "0.2.102"
futures-util = { version = "0.3.32", features = ["io"] }
isocountry = "0.3.2"
geph5-misc-rpc = "0.2.102"
derive_more = "=2.0.1"
tui-textarea = "0.7.0"
hmac-sha256 = "1.1.14"
hex = "0.4.3"
sys-locale = "0.3.2"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]

# This attempts to prevent Defender from yelling at us
[profile.release]
panic = "abort"
opt-level = 3
strip = true
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = 1
