[package]
name = "geph-tui"
version = "2.1.0"
edition = "2021"
description = "TUI client for Geph 5"
repository = "https://github.com/godfreyschneider0-lgtm/geph-lite"
license = "MPL-2.0"

# See more keys and their definitions at https://doc-rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "geph5/libraries/*",
    "geph5/binaries/*",
]
resolver = "2"

[workspace.package]
version = "0.2.102"
repository = "https://github.com/geph-official/geph5"
license = "ISC"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
smolscale = "0.4"
anyhow = "1.0.102"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.4"
parking_lot = "0.11.2"
slab = "0.4.12"
smol = "2"
dirs = "4.0.0"
tempfile = "3.27.0"
ratatui = "0.29.0"
crossterm = "0.28.1"

flume = "0.10.14"

oneshot = "0.1"

serde_yaml = "0.9.34"
semver = "1.0.28"
smol-timeout2 = "0.6.1"
rand = "0.8.6"
nanorpc = "0.1.13"
async-trait = "0.1.89"
thiserror = "2.0.18"
geph5-broker-protocol = { path = "geph5/libraries/geph5-broker-protocol" }
futures-util = { version = "0.3.32", features = ["io"] }
isocountry = "0.3.2"
geph5-misc-rpc = { path = "geph5/libraries/geph5-misc-rpc" }
derive_more = "=2.0.1"
tui-textarea = "0.7.0"
hmac-sha256 = "1.1.14"
hex = "0.4.3"
sys-locale = "0.3.2"



[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]

[package.metadata.deb]
name = "geph-tui"
maintainer = "godfreyschneider0-lgtm <godfreyschneider0@lgtm.dev>"
copyright = "2025-2026, godfreyschneider0-lgtm <godfreyschneider0@lgtm.dev>"
depends = "libc6 (>= 2.17), libgcc-s1"
section = "net"
priority = "optional"
extended-description = """
 A lightweight terminal user interface client for the Geph 5 proxy service.
 Provides SOCKS5 and HTTP proxy with an interactive TUI.
 .
 Daemon management via the bundled mikuctl command:
   mikuctl start|stop|restart|status|log"""
license-file = ["package/deb-copyright", "0"]
maintainer-scripts = "package/deb-scripts"
assets = [
    ["target/release/geph-tui", "usr/bin/geph-tui", "755"],
    ["target/release/geph5-client", "usr/bin/geph5-client", "755"],
    ["mikuctl", "usr/bin/mikuctl", "755"],
]

# This attempts to prevent Defender from yelling at us
[profile.release]
panic = "abort"
opt-level = 3
strip = true
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = 1
